--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -9,7 +9,10 @@
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.9" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.9" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.9" />
+      <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
       <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     </ItemGroup>
 
