--- a/API/API.csproj
+++ b/API/API.csproj
@@ -22,6 +22,8 @@
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="NLog" Version="5.0.0-preview.1" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
     </ItemGroup>
 
