--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -12,6 +12,8 @@
       <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="NLog" Version="5.0.0-preview.1" />
+      <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
       <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     </ItemGroup>
