--- a/API/ClientApp/package.json
+++ b/API/ClientApp/package.json
@@ -6,11 +6,13 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
+    "mobx": "^6.3.3",
+    "mobx-react-lite": "^3.2.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^3.4.4",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2"
